app/assets/css/error.scss
@use "./variables" as *;

$bg-end: #120E19;

// extends dark-theme so most text styles etc are declared there
.error-theme {
	.site-container {
		background: $bg-end url("/image/background/the_end.jpg") no-repeat center;
	}
	.textured, .accent-textured {
		background: transparent;
	}
	header {
		box-shadow: none !important;
	}
	// make page a bit shorter (no need for bottom padding)
	.container {
		padding-bottom: 0px;
	}
}

